--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,18 @@
--   repo: git@github.com:Yelp/detect-secrets
-    rev: v0.13.0
-    hooks:
-    -   id: detect-secrets
-        args: ['--baseline', '.secrets.baseline']
-        exclude: poetry.lock
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.5.0
-    hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: no-commit-to-branch
-        args: [--branch, develop, --branch, master, --pattern, release/.*]
--   repo: https://github.com/psf/black
-    rev: 20.8b1
-    hooks:
-    -   id: black
+repos:
+- repo: https://github.com/Yelp/detect-secrets
+  rev: v1.2.0
+  hooks:
+    - id: detect-secrets
+      args: ["--baseline", ".secrets.baseline"]
+      exclude: poetry.lock
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.1.0
+  hooks:
+    - id: trailing-whitespace
+    - id: end-of-file-fixer
+    - id: no-commit-to-branch
+      args: [--branch, develop, --branch, master, --pattern, release/.*]
+- repo: https://github.com/psf/black
+  rev: 22.1.0
+  hooks:
+    - id: black
