--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,4 +21,6 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-package_stuff = "v2.package_series:main"
+package-stuff = "v2.package_series:main"
+convert-acr = "conversion.convert_acr:main"
+convert-rsna = "conversion.convert_rsna:main"
