--- a/workflow/usecase1/usecase1.yaml
+++ b/workflow/usecase1/usecase1.yaml
@@ -7,7 +7,7 @@ spec:
     - name: main
       container:
         name: pod
-        image: 'midrc-jupyter-minimal-notebook:latest'
+        image: "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/midrc-etl:feat_midrcETL"
         imagePullPolicy: Never
         command:
           - bash
