--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pqdm = "^0.2.0"
 jupyterlab = "^3.3.2"
 papermill = "^2.3.4"
 pandas = "^1.4.2"
+urllib3 = "1.26.9"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
