--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,15 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "~3.9"
 boto3 = "^1.21.25"
 pqdm = "^0.2.0"
 jupyterlab = "^3.3.2"
 papermill = "^2.3.4"
 pandas = "^1.4.2"
 urllib3 = "1.26.9"
+gen3 = "^4.11.4"
+jsonobject = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
