--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pandas = "^1.4.2"
 urllib3 = "1.26.9"
 gen3 = "^4.11.4"
 jsonobject = "^2.0.0"
+pyarrow = "^8.0.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
