--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ jupyterlab = "^3.3.2"
 papermill = "^2.3.4"
 pandas = "^1.4.2"
 urllib3 = "1.26.9"
+pyarrow = "^8.0.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
