--- a/workflow/run_process_acr_submission.yaml
+++ b/workflow/run_process_acr_submission.yaml
@@ -16,6 +16,7 @@ spec:
       container:
         name: midrcpod
         image: "quay.io/cdis/midrc-etl:v3"
+        imagePullPolicy: "Always"
         command:
           - bash
           - -c
@@ -26,7 +27,7 @@ spec:
             echo "packages installed"; 
             echo "start script";
             cd v3; 
-            python3 process_acr_submission.py --submission ACR_20220314 --input_path /Users/andrewprokhorenkov/CTDS/projects/midrc/ssot-s3/replicated-data-acr --output_path /Users/andrewprokhorenkov/CTDS/projects/midrc/indexing-data/packages_acr
+            python3 process_acr_submission.py --submission ACR_20220314 --input_path /Users/andrewprokhorenkov/CTDS/projects/midrc/ssot-s3/replicated-data-acr --output_path /Users/andrewprokhorenkov/CTDS/projects/midrc/indexing-data/packages_acr;
             echo "end script";
     - name: step2-run-py-script
       container:
