--- a/workflow/run_process_acr_submission.yaml
+++ b/workflow/run_process_acr_submission.yaml
@@ -1,5 +1,5 @@
 metadata:
-  name: s15
+  name: s30
   namespace: argo
 spec:
   entrypoint: main
@@ -22,12 +22,11 @@ spec:
           - -c
         args:
           - echo "installing packages";
-            pip install numpy;
-            pip install pandas;
+            poetry run python /midrc-etl/v3/package_series.py;
             echo "packages installed"; 
             echo "start script";
             cd v3; 
-            python3 process_acr_submission.py --submission ACR_20220314 --input_path /Users/andrewprokhorenkov/CTDS/projects/midrc/ssot-s3/replicated-data-acr --output_path /Users/andrewprokhorenkov/CTDS/projects/midrc/indexing-data/packages_acr;
+            ls;
             echo "end script";
     - name: step2-run-py-script
       container:
