--- a/workflow/run_process_acr_submission.yaml
+++ b/workflow/run_process_acr_submission.yaml
@@ -1,41 +1,45 @@
 metadata:
-  name: s30
+  name: acrsubm
   namespace: argo
 spec:
-  entrypoint: main
   templates:
-    - name: main 
-      steps:
-        - - name: step1
-            template: step1-install-packages
-            arguments: {}
-        - - name: step2
-            template: step2-run-py-script
-            arguments: {}
-    - name: step1-install-packages
+    - name: main
+      inputs:
+        parameters:
+          - name: submission
+            value: '{{workflow.parameters.submission}}'
+          - name: s3key
+            value: '{{workflow.parameters.s3key}}'
+          - name: inputdir
+            value: '{{workflow.parameters.inputdir}}'
+      outputs: {}
+      metadata: {}
       container:
         name: midrcpod
-        image: "quay.io/cdis/midrc-etl:v3"
-        imagePullPolicy: "Always"
+        image: 'quay.io/cdis/midrc-etl:v3'
         command:
           - bash
-          - -c
+          - '-c'
         args:
-          - echo "installing packages";
-            poetry run python /midrc-etl/v3/package_series.py;
-            echo "packages installed"; 
-            echo "start script";
-            cd v3; 
-            ls;
-            echo "end script";
+          - >-
+            mkdir -p /midrc-data/{{inputs.parameters.submission}};  echo "RUNNING
+            SCRIPT 1"; poetry run python /midrc-etl/v3/process_acr_submission.py
+            --submission {{inputs.parameters.submission}} --input_path /midrc-data --output_path
+            /midrc-data/{{inputs.parameters.submission}}/output --new --s3key {{inputs.parameters.s3key}}; echo "SCRIPT 1 HAS RUN"; echo
+            "RUNNING SCRIPT 2"; poetry run python
+            /midrc-etl/v3/package_series.py --input_directory {{inputs.parameters.inputdir}}; echo "SCRIPT 2 HAS RUN"; echo
+            "LISTING FILES IN DIRECTORY"; cd /midrc-data/{{inputs.parameters.submission}}/output;
+            ls; echo "END OF WORKFLOW";
+        resources: {}
+        imagePullPolicy: Always
       serviceAccountName: data-midrc-org-s3-full-access-serviceaccount
       automountServiceAccountToken: true
-    - name: step2-run-py-script
-      container:
-        name: midrcpod
-        image: "quay.io/cdis/midrc-etl:v3"
-        command:
-          - bash
-          - -c
-        args:
-          - echo "Test Step 2";
+  entrypoint: main
+  arguments:
+    parameters:
+      - name: submission
+        value: "ACR_20220415"
+      - name: s3key
+        value: 'replicated-data-acr/ACR_20220415/image_file_object_manifest_ACR_20220415.tsv'
+      - name: inputdir
+        value: '/midrc-data/ACR_20220415/output'
