--- a/workflow/run_process_acr_submission.yaml
+++ b/workflow/run_process_acr_submission.yaml
@@ -23,13 +23,13 @@ spec:
         args:
           - >-
             mkdir -p /midrc-data/{{inputs.parameters.submission}};  echo "RUNNING
-            SCRIPT 1"; poetry run python /midrc-etl/v3/process_acr_submission.py
+            SCRIPT 1"; poetry run python /midrc-etl/notification/slackDataIngestionStepStart.py; poetry run python /midrc-etl/v3/process_acr_submission.py
             --submission {{inputs.parameters.submission}} --input_path /midrc-data --output_path
-            /midrc-data/{{inputs.parameters.submission}}/output --new --s3key {{inputs.parameters.s3key}}; echo "SCRIPT 1 HAS RUN"; echo
-            "RUNNING SCRIPT 2"; poetry run python
-            /midrc-etl/v3/package_series.py --input_directory {{inputs.parameters.inputdir}}; echo "SCRIPT 2 HAS RUN"; echo
+            /midrc-data/{{inputs.parameters.submission}}/output --new --s3key {{inputs.parameters.s3key}}; echo "SCRIPT 1 HAS RUN"; poetry run python /midrc-etl/notification/slackDataIngestionStepDone.py; echo
+            "RUNNING SCRIPT 2"; poetry run python /midrc-etl/notification/slackDataIngestionStepStart.py; poetry run python
+            /midrc-etl/v3/package_series.py --input_directory {{inputs.parameters.inputdir}}; echo "SCRIPT 2 HAS RUN"; poetry run python /midrc-etl/notification/slackDataIngestionStepDone.py; echo
             "LISTING FILES IN DIRECTORY"; cd /midrc-data/{{inputs.parameters.submission}}/output;
-            ls; echo "END OF WORKFLOW";
+            ls; echo "END OF WORKFLOW"; poetry run python /midrc-etl/notification/slackDataIngestionDone.py;
         resources: {}
         imagePullPolicy: Always
       serviceAccountName: data-midrc-org-s3-full-access-serviceaccount
