--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ urllib3 = "1.26.9"
 gen3 = "^4.11.4"
 jsonobject = "^2.0.0"
 pyarrow = "^8.0.0"
+paramiko = "^3.5.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.1.0"
